--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <a class="offer-button2 btn" href="#">our works</a>
         </div>
     </div>
+    <div class="slider-down ">
+        <a href="#"><span class="slider-down-1">˅</span></a>
+    </div>
 
 </header>
 <!-- block1 -->
