--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
 <!-- block avatar-->
 <div class="avatar container">
     <img alt="avatar" class="avatar-foto" height="120px" src="assets/img/our-team/Warstwa_9.png" width="120px">
+    <div class="slider-side">
+        <a href="#"><span class="slider-left">< </span></a>
+        <a href="#"><span class="slider-right">></span></a>
+    </div>
     <p class="avatar-text">These guys are incredible! I get my project in 10 days and it was awesome!</p>
     <p class="avatar-text">Very good service! Highly recommended!</p>
     <p class="avatar-text">John Smith</p>
