--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
     <nav class="submit-down">
         <form action="#" method="post" name="hire ">
             <div class="submit-down-button">
-                <label><input name="icon" type="submit" value="HIRE US"></label>
+                <form action="#" enctype="multipart/form-data">
+                    <label><input name="icon" type="submit" value="HIRE US"></label>
+                </form>
             </div>
         </form>
         <ul>
